--- a/book_library/views/library_book_genre.xml
+++ b/book_library/views/library_book_genre.xml
@@ -2,32 +2,32 @@
 <!-- Copyright 2019 Xavier Piernas <xavier.piernas@qubiq.es>
      License AGPL-3.0 or later (https://www.gnu.org/licenses/agpl). -->
 <odoo>
-<!-- library.book.genre form view -->
-<record id="library_book_genre_view_form" model="ir.ui.view">
-    <field name="name">library.book.genre.view.form</field>
-    <field name="model">library.book.genre</field>
-    <field name="arch" type="xml">
-        <form>
-            <sheet>
-                <group>
-                    <field name="genre"/>
-                    
-                </group>
-            </sheet>
-        </form>
-    </field>
-</record>
-<!-- library.book.genre tree view -->
-<record id="library_book_genre_view_tree" model="ir.ui.view">
-    <field name="name">library.book.genre.view.tree</field>
-    <field name="model">library.book.genre</field>
-    <field name="arch" type="xml">
-        <tree editable="bottom">
-            <field name="genre"/>
-            
-        </tree>
-    </field>
-</record>
+    <!-- library.book.genre form view -->
+    <record id="library_book_genre_view_form" model="ir.ui.view">
+        <field name="name">library.book.genre.view.form</field>
+        <field name="model">library.book.genre</field>
+        <field name="arch" type="xml">
+            <form>
+                <sheet>
+                    <group>
+                        <field name="name"/>
+                        
+                    </group>
+                </sheet>
+            </form>
+        </field>
+    </record>
+    <!-- library.book.genre tree view -->
+    <record id="library_book_genre_view_tree" model="ir.ui.view">
+        <field name="name">library.book.genre.view.tree</field>
+        <field name="model">library.book.genre</field>
+        <field name="arch" type="xml">
+            <tree editable="bottom">
+                <field name="name"/>
+                
+            </tree>
+        </field>
+    </record>
 <!-- book.library action window -->
     <record id="library_book_genre_action" model="ir.actions.act_window">
         <field name="name">Book Genre</field>
