--- a/book_library/views/res_partner.xml
+++ b/book_library/views/res_partner.xml
@@ -8,14 +8,17 @@
         <field name="model">res.partner</field>
         <field name="inherit_id" ref="base.view_partner_form"/>
         <field name="arch" type="xml">
-        <!-- Add your xpath here -->
-        <xpath expr="//field[@name='vat']" position="after">
-            <field name="partner"/>
-            <field name="partner_number" invisible="partner == False"/>
-            <field name="author" position="after"/>
-            <field name="genre_ids" position="after" invisible= "author == False"/>
-        </xpath>
-
+        <!-- Add your xpath here company-->
+            <xpath expr="//field[@name='name']" position="after">
+                <field name="first_name"/>
+                <field name="last_name"/>
+            </xpath>
+            <xpath expr="//field[@name='vat']" position="after">
+                <field name="partner"/>
+                <field name="partner_number" invisible="partner == False"/>
+                <field name="author" position="after"/>
+                <field name="genre_ids" position="after" invisible= "author == False"/>
+            </xpath>
         </field>
     </record>
     
