--- a/book_library/reports/reports.xml
+++ b/book_library/reports/reports.xml
@@ -7,7 +7,7 @@
             <field name="report_type">qweb-pdf</field>
             <field name="report_name">book_library.record_book_custom</field>
             <field name="report_file">library_module.record_book_custom</field>
-            <field name="print_report_name">("Libro - " + object.name)</field>
+            <field name="print_report_name">("Book - " + object.name)</field>
             <field name="binding_model_id" ref="model_book_library"/>
             <field name="binding_type">report</field>
         </record>
