--- a/book_library/reports/sale_report_inherit.xml
+++ b/book_library/reports/sale_report_inherit.xml
@@ -3,7 +3,7 @@
     <template id="sale_report_inherit" inherit_id="sale.report_saleorder_document">
             <xpath expr="//div[@t-if='doc.user_id.name']" position="after">
                 <t t-if="doc.partner_id.partner">
-                    <strong>Memership number:</strong><br/>
+                    <strong>Membership number:</strong><br/>
                     <span t-field="doc.partner_id.partner_number"/>
                 </t>
             </xpath>
