--- a/user_story_packs/views/product_template.xml
+++ b/user_story_packs/views/product_template.xml
@@ -19,7 +19,7 @@
                   invisible= "is_pack == False">
                     <group string="Options" col="4">
                         <field name="price_pack_method"/>
-                        <field name="list_price" widget="monetary"
+                        <field name="total_price" widget="monetary"
                             options="{'currency_field': 'currency_id', 'field_digits': True}"/>
                     </group>
                     <separator string="Component Lines" />
