[ADD] Practica Final 4

--- a/book_library/reports/reports.xml
+++ b/book_library/reports/reports.xml
@@ -11,5 +11,16 @@
             <field name="binding_model_id" ref="model_book_library"/>
             <field name="binding_type">report</field>
         </record>
+
+        <record id="borrowed_books" model="ir.actions.report">
+            <field name="name">Books to Return</field>
+            <field name="model">res.partner</field>
+            <field name="report_type">qweb-pdf</field>
+            <field name="report_name">book_library.report_borrowed_books</field>
+            <field name="report_file">book_library.report_borrowed_books</field>
+            <field name="print_report_name">(object.name + ' - Books to return')</field>
+            <field name="binding_model_id" ref="book_library.model_res_partner"/>
+            <field name="binding_type">report</field>
+        </record>
     </data>
 </odoo>
