--- a/book_library/views/book_library.xml
+++ b/book_library/views/book_library.xml
@@ -31,12 +31,32 @@
                     <group>
                         <field name="synopsis"/>
                     </group>
+                    <group>
+                        <field name="qty_total"/>
+                        <field name="qty_borrowed"/>
+                        <field name="qty_available"/>
+                    </group>
                 </group>
                 <notebook invisible="is_pack == False">
                     <page string="Pack">
                         <field name= "pack_ids" invisible= "is_pack == False"/>
                     </page>
                 </notebook>
+                 <separator string="Loans"/>
+                    <field name="rent_line_ids">
+                        <tree editable="bottom" decoration-success="state == 'returned'">
+                            <field name="partner_id"
+                                options="{'no_create': True, 'no_edit': True}"
+                                />
+                            <field name="partner_number"/>
+                            <field name="state"/>
+                            <field name="borrow_date" autocomplete="off"/>
+                            <!-- 4º Historia de Usuario-->
+                            <field name="return_date" invisible="return_date == False"
+                                autocomplete="off"/>
+                            <button name="return_book" type="object" icon="fa-check"></button>
+                        </tree>
+                    </field>
             </sheet>
         </form>
     </field>
