--- a/product_packs/reports/report.xml
+++ b/product_packs/reports/report.xml
@@ -5,8 +5,8 @@
             <field name="name">Pack Product Custom</field>
             <field name="model">product.template</field>
             <field name="report_type">qweb-pdf</field>
-            <field name="report_name">user_story_packs.report_pack_custom</field>
-            <field name="report_file">user_story_packs.report_pack_custom</field>
+            <field name="report_name">product_packs.report_pack_custom</field>
+            <field name="report_file">product_packs.report_pack_custom</field>
             <field name="print_report_name">("Pack -" + object.name)</field>
             <field name="binding_model_id" ref="model_product_template"/>
             <field name="binding_type">report</field>
