--- a/product_packs/reports/report_pack_template.xml
+++ b/product_packs/reports/report_pack_template.xml
@@ -27,7 +27,7 @@
     <template id="report_pack_custom">
         <t t-call="web.html_container">
             <t t-foreach="docs" t-as="o">
-                <t t-call="user_story_packs.report_pack_custom_document"/>
+                <t t-call="product_packs.report_pack_custom_document"/>
             </t>
         </t>
     </template>
